// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.e8g0a610,html.e8g0a610 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="dlsh340 _9lz7ur10 _9lz7ur13">
+        <div class="_1v8fg0v0 e8g0a68p e8g0a67l e8g0a6ax e8g0a69t e8g0a65d e8g0a669 e8g0a6i9 e8g0a64j e8g0a64c _9lz7ur10 _9lz7ur13 e8g0a633 e8g0a636">
+          <span class="_1v8fg0v0 e8g0a64x _9lz7ur0 _9lz7ur1 _9lz7ur1t _9lz7ura _17i4nh34">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1v8fg0v0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1v8fg0v1 {
  display: block;
}
._1v8fg0v2 {
  line-height: 1;
}
._1v8fg0v3 {
  list-style: none;
}
._1v8fg0v4 {
  quotes: none;
}
._1v8fg0v4:after,
._1v8fg0v4:before {
  content: "";
}
._1v8fg0v5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1v8fg0v6 {
  appearance: none;
}
._1v8fg0v7 {
  background-color: transparent;
}
._1v8fg0v8 {
  outline: var(--_15s21r910) solid transparent;
  transition: outline-color 0.125s ease;
}
._1v8fg0v8:focus-visible {
  outline-color: var(--_15s21r9m);
}
._1v8fg0va {
  color: inherit;
}
._1v8fg0vb:disabled {
  opacity: 1;
}
._1v8fg0vb::-ms-expand {
  display: none;
}
._1v8fg0vd[type="number"] {
  -moz-appearance: textfield;
}
._1v8fg0vd[type="number"]::-webkit-inner-spin-button,
._1v8fg0vd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1v8fg0vd::-ms-clear {
  display: none;
}
._1v8fg0vd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1v8fg0vg {
  color: inherit;
  text-decoration: none;
}
.e8g0a60 {
  overflow: hidden;
}
.e8g0a61 {
  overflow: scroll;
}
.e8g0a62 {
  overflow: visible;
}
.e8g0a63 {
  overflow: auto;
}
.e8g0a64 {
  -webkit-user-select: none;
  user-select: none;
}
.e8g0a65 {
  outline: var(--_15s21r910) solid transparent;
  transition: outline-color 0.125s ease;
}
.e8g0a65:focus-visible {
  outline-color: var(--_15s21r9m);
}
.e8g0a66 {
  opacity: 0;
}
.e8g0a67 {
  z-index: 0;
}
.e8g0a68 {
  z-index: 1;
}
.e8g0a69 {
  z-index: 2;
}
.e8g0a6a {
  z-index: 90;
}
.e8g0a6b {
  z-index: 100;
}
.e8g0a6c {
  z-index: 200;
}
.e8g0a6d {
  z-index: 290;
}
.e8g0a6e {
  z-index: 300;
}
.e8g0a6f {
  z-index: 400;
}
.e8g0a6g {
  cursor: default;
}
.e8g0a6h {
  cursor: pointer;
}
.e8g0a6i {
  pointer-events: none;
}
.e8g0a6j {
  top: 0;
}
.e8g0a6k {
  bottom: 0;
}
.e8g0a6l {
  left: 0;
}
.e8g0a6m {
  right: 0;
}
.e8g0a6n {
  height: 100%;
}
.e8g0a6o {
  height: var(--_15s21r99);
}
.e8g0a6p {
  width: 100%;
}
.e8g0a6q {
  width: var(--_15s21r99);
}
.e8g0a6r {
  min-width: 0;
}
.e8g0a6s {
  max-width: var(--_15s21r911);
}
.e8g0a6t {
  max-width: var(--_15s21r912);
}
.e8g0a6u {
  max-width: var(--_15s21r913);
}
.e8g0a6v {
  max-width: var(--_15s21r914);
}
.e8g0a6w {
  max-width: fit-content;
}
.e8g0a6x {
  transition: var(--_15s21r95h);
}
.e8g0a6y {
  transition: var(--_15s21r95i);
}
.e8g0a6z:active {
  transform: var(--_15s21r95j);
}
html.e8g0a610 .e8g0a612,
html:not(.e8g0a610) .e8g0a611 {
  background: var(--_15s21r91s);
}
html.e8g0a610 .e8g0a614,
html:not(.e8g0a610) .e8g0a613 {
  background: var(--_15s21r91t);
}
html.e8g0a610 .e8g0a616,
html:not(.e8g0a610) .e8g0a615 {
  background: var(--_15s21r91u);
}
html.e8g0a610 .e8g0a618,
html:not(.e8g0a610) .e8g0a617 {
  background: var(--_15s21r91v);
}
html.e8g0a610 .e8g0a61a,
html:not(.e8g0a610) .e8g0a619 {
  background: var(--_15s21r91w);
}
html.e8g0a610 .e8g0a61c,
html:not(.e8g0a610) .e8g0a61b {
  background: var(--_15s21r91x);
}
html.e8g0a610 .e8g0a61e,
html:not(.e8g0a610) .e8g0a61d {
  background: var(--_15s21r91y);
}
html.e8g0a610 .e8g0a61g,
html:not(.e8g0a610) .e8g0a61f {
  background: var(--_15s21r91z);
}
html.e8g0a610 .e8g0a61i,
html:not(.e8g0a610) .e8g0a61h {
  background: var(--_15s21r920);
}
html.e8g0a610 .e8g0a61k,
html:not(.e8g0a610) .e8g0a61j {
  background: var(--_15s21r921);
}
html.e8g0a610 .e8g0a61m,
html:not(.e8g0a610) .e8g0a61l {
  background: var(--_15s21r922);
}
html.e8g0a610 .e8g0a61o,
html:not(.e8g0a610) .e8g0a61n {
  background: var(--_15s21r923);
}
html.e8g0a610 .e8g0a61q,
html:not(.e8g0a610) .e8g0a61p {
  background: var(--_15s21r924);
}
html.e8g0a610 .e8g0a61s,
html:not(.e8g0a610) .e8g0a61r {
  background: var(--_15s21r925);
}
html.e8g0a610 .e8g0a61u,
html:not(.e8g0a610) .e8g0a61t {
  background: var(--_15s21r926);
}
html.e8g0a610 .e8g0a61w,
html:not(.e8g0a610) .e8g0a61v {
  background: var(--_15s21r927);
}
html.e8g0a610 .e8g0a61y,
html:not(.e8g0a610) .e8g0a61x {
  background: var(--_15s21r928);
}
html.e8g0a610 .e8g0a620,
html:not(.e8g0a610) .e8g0a61z {
  background: var(--_15s21r929);
}
html.e8g0a610 .e8g0a622,
html:not(.e8g0a610) .e8g0a621 {
  background: var(--_15s21r92a);
}
html.e8g0a610 .e8g0a624,
html:not(.e8g0a610) .e8g0a623 {
  background: var(--_15s21r92b);
}
html.e8g0a610 .e8g0a626,
html:not(.e8g0a610) .e8g0a625 {
  background: var(--_15s21r92c);
}
html.e8g0a610 .e8g0a628,
html:not(.e8g0a610) .e8g0a627 {
  background: var(--_15s21r92d);
}
html.e8g0a610 .e8g0a62a,
html:not(.e8g0a610) .e8g0a629 {
  background: var(--_15s21r92e);
}
html.e8g0a610 .e8g0a62c,
html:not(.e8g0a610) .e8g0a62b {
  background: var(--_15s21r92f);
}
html.e8g0a610 .e8g0a62e,
html:not(.e8g0a610) .e8g0a62d {
  background: var(--_15s21r92g);
}
html.e8g0a610 .e8g0a62g,
html:not(.e8g0a610) .e8g0a62f {
  background: var(--_15s21r92h);
}
html.e8g0a610 .e8g0a62i,
html:not(.e8g0a610) .e8g0a62h {
  background: var(--_15s21r92i);
}
html.e8g0a610 .e8g0a62k,
html:not(.e8g0a610) .e8g0a62j {
  background: var(--_15s21r92j);
}
html.e8g0a610 .e8g0a62m,
html:not(.e8g0a610) .e8g0a62l {
  background: var(--_15s21r92k);
}
html.e8g0a610 .e8g0a62o,
html:not(.e8g0a610) .e8g0a62n {
  background: var(--_15s21r92l);
}
html.e8g0a610 .e8g0a62q,
html:not(.e8g0a610) .e8g0a62p {
  background: var(--_15s21r92m);
}
html.e8g0a610 .e8g0a62s,
html:not(.e8g0a610) .e8g0a62r {
  background: var(--_15s21r92n);
}
html.e8g0a610 .e8g0a62u,
html:not(.e8g0a610) .e8g0a62t {
  background: var(--_15s21r92o);
}
html.e8g0a610 .e8g0a62w,
html:not(.e8g0a610) .e8g0a62v {
  background: var(--_15s21r92p);
}
html.e8g0a610 .e8g0a62y,
html:not(.e8g0a610) .e8g0a62x {
  background: var(--_15s21r92q);
}
html.e8g0a610 .e8g0a630,
html:not(.e8g0a610) .e8g0a62z {
  background: var(--_15s21r92r);
}
html.e8g0a610 .e8g0a632,
html:not(.e8g0a610) .e8g0a631 {
  background: var(--_15s21r92s);
}
html.e8g0a610 .e8g0a634,
html:not(.e8g0a610) .e8g0a633 {
  background: var(--_15s21r92t);
}
html.e8g0a610 .e8g0a636,
html:not(.e8g0a610) .e8g0a635 {
  background: var(--_15s21r92u);
}
html.e8g0a610 .e8g0a638,
html:not(.e8g0a610) .e8g0a637 {
  box-shadow: var(--_15s21r95k);
}
html.e8g0a610 .e8g0a63a,
html:not(.e8g0a610) .e8g0a639 {
  box-shadow: var(--_15s21r95l);
}
html.e8g0a610 .e8g0a63c,
html:not(.e8g0a610) .e8g0a63b {
  box-shadow: var(--_15s21r95m);
}
html.e8g0a610 .e8g0a63e,
html:not(.e8g0a610) .e8g0a63d {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9f);
}
html.e8g0a610 .e8g0a63g,
html:not(.e8g0a610) .e8g0a63f {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9g);
}
html.e8g0a610 .e8g0a63i,
html:not(.e8g0a610) .e8g0a63h {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9f);
}
html.e8g0a610 .e8g0a63k,
html:not(.e8g0a610) .e8g0a63j {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9g);
}
html.e8g0a610 .e8g0a63m,
html:not(.e8g0a610) .e8g0a63l {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9h);
}
html.e8g0a610 .e8g0a63o,
html:not(.e8g0a610) .e8g0a63n {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9i);
}
html.e8g0a610 .e8g0a63q,
html:not(.e8g0a610) .e8g0a63p {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9j);
}
html.e8g0a610 .e8g0a63s,
html:not(.e8g0a610) .e8g0a63r {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9j);
}
html.e8g0a610 .e8g0a63u,
html:not(.e8g0a610) .e8g0a63t {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9k);
}
html.e8g0a610 .e8g0a63w,
html:not(.e8g0a610) .e8g0a63v {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9k);
}
html.e8g0a610 .e8g0a63y,
html:not(.e8g0a610) .e8g0a63x {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9l);
}
html.e8g0a610 .e8g0a640,
html:not(.e8g0a610) .e8g0a63z {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9n);
}
html.e8g0a610 .e8g0a642,
html:not(.e8g0a610) .e8g0a641 {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9n);
}
html.e8g0a610 .e8g0a644,
html:not(.e8g0a610) .e8g0a643 {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9o);
}
html.e8g0a610 .e8g0a646,
html:not(.e8g0a610) .e8g0a645 {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9o);
}
html.e8g0a610 .e8g0a648,
html:not(.e8g0a610) .e8g0a647 {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9p);
}
html.e8g0a610 .e8g0a64a,
html:not(.e8g0a610) .e8g0a649 {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9q);
}
html.e8g0a610 .e8g0a64c,
html:not(.e8g0a610) .e8g0a64b {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9r);
}
html.e8g0a610 .e8g0a64e,
html:not(.e8g0a610) .e8g0a64d {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9r);
}
html.e8g0a610 .e8g0a64g,
html:not(.e8g0a610) .e8g0a64f {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9s);
}
html.e8g0a610 .e8g0a64i,
html:not(.e8g0a610) .e8g0a64h {
  box-shadow: inset 0 0 0 var(--_15s21r9z) var(--_15s21r9s);
}
html.e8g0a610 .e8g0a64k,
html:not(.e8g0a610) .e8g0a64j {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9t);
}
html.e8g0a610 .e8g0a64m,
html:not(.e8g0a610) .e8g0a64l {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9u);
}
html.e8g0a610 .e8g0a64o,
html:not(.e8g0a610) .e8g0a64n {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9v);
}
html.e8g0a610 .e8g0a64q,
html:not(.e8g0a610) .e8g0a64p {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9w);
}
html.e8g0a610 .e8g0a64s,
html:not(.e8g0a610) .e8g0a64r {
  box-shadow: inset 0 0 0 var(--_15s21r9y) var(--_15s21r9x);
}
.e8g0a64t {
  display: none;
}
.e8g0a64x {
  display: block;
}
.e8g0a651 {
  display: inline;
}
.e8g0a655 {
  display: inline-block;
}
.e8g0a659 {
  display: flex;
}
.e8g0a65d {
  position: relative;
}
.e8g0a65h {
  position: absolute;
}
.e8g0a65l {
  position: fixed;
}
.e8g0a65p {
  position: sticky;
}
.e8g0a65t {
  border-radius: 0;
}
.e8g0a65x {
  border-radius: 9999px;
}
.e8g0a661 {
  border-radius: var(--_15s21r9b);
}
.e8g0a665 {
  border-radius: var(--_15s21r9c);
}
.e8g0a669 {
  border-radius: var(--_15s21r9d);
}
.e8g0a66d {
  border-radius: var(--_15s21r9e);
}
.e8g0a66h {
  gap: var(--_15s21r90);
}
.e8g0a66l {
  gap: var(--_15s21r91);
}
.e8g0a66p {
  gap: var(--_15s21r92);
}
.e8g0a66t {
  gap: var(--_15s21r93);
}
.e8g0a66x {
  gap: var(--_15s21r94);
}
.e8g0a671 {
  gap: var(--_15s21r95);
}
.e8g0a675 {
  gap: var(--_15s21r96);
}
.e8g0a679 {
  gap: var(--_15s21r97);
}
.e8g0a67d {
  gap: var(--_15s21r98);
}
.e8g0a67h {
  gap: 0;
}
.e8g0a67l {
  padding-top: var(--_15s21r90);
}
.e8g0a67p {
  padding-top: var(--_15s21r91);
}
.e8g0a67t {
  padding-top: var(--_15s21r92);
}
.e8g0a67x {
  padding-top: var(--_15s21r93);
}
.e8g0a681 {
  padding-top: var(--_15s21r94);
}
.e8g0a685 {
  padding-top: var(--_15s21r95);
}
.e8g0a689 {
  padding-top: var(--_15s21r96);
}
.e8g0a68d {
  padding-top: var(--_15s21r97);
}
.e8g0a68h {
  padding-top: var(--_15s21r98);
}
.e8g0a68l {
  padding-top: 0;
}
.e8g0a68p {
  padding-bottom: var(--_15s21r90);
}
.e8g0a68t {
  padding-bottom: var(--_15s21r91);
}
.e8g0a68x {
  padding-bottom: var(--_15s21r92);
}
.e8g0a691 {
  padding-bottom: var(--_15s21r93);
}
.e8g0a695 {
  padding-bottom: var(--_15s21r94);
}
.e8g0a699 {
  padding-bottom: var(--_15s21r95);
}
.e8g0a69d {
  padding-bottom: var(--_15s21r96);
}
.e8g0a69h {
  padding-bottom: var(--_15s21r97);
}
.e8g0a69l {
  padding-bottom: var(--_15s21r98);
}
.e8g0a69p {
  padding-bottom: 0;
}
.e8g0a69t {
  padding-right: var(--_15s21r90);
}
.e8g0a69x {
  padding-right: var(--_15s21r91);
}
.e8g0a6a1 {
  padding-right: var(--_15s21r92);
}
.e8g0a6a5 {
  padding-right: var(--_15s21r93);
}
.e8g0a6a9 {
  padding-right: var(--_15s21r94);
}
.e8g0a6ad {
  padding-right: var(--_15s21r95);
}
.e8g0a6ah {
  padding-right: var(--_15s21r96);
}
.e8g0a6al {
  padding-right: var(--_15s21r97);
}
.e8g0a6ap {
  padding-right: var(--_15s21r98);
}
.e8g0a6at {
  padding-right: 0;
}
.e8g0a6ax {
  padding-left: var(--_15s21r90);
}
.e8g0a6b1 {
  padding-left: var(--_15s21r91);
}
.e8g0a6b5 {
  padding-left: var(--_15s21r92);
}
.e8g0a6b9 {
  padding-left: var(--_15s21r93);
}
.e8g0a6bd {
  padding-left: var(--_15s21r94);
}
.e8g0a6bh {
  padding-left: var(--_15s21r95);
}
.e8g0a6bl {
  padding-left: var(--_15s21r96);
}
.e8g0a6bp {
  padding-left: var(--_15s21r97);
}
.e8g0a6bt {
  padding-left: var(--_15s21r98);
}
.e8g0a6bx {
  padding-left: 0;
}
.e8g0a6c1 {
  margin-top: var(--_15s21r90);
}
.e8g0a6c5 {
  margin-top: var(--_15s21r91);
}
.e8g0a6c9 {
  margin-top: var(--_15s21r92);
}
.e8g0a6cd {
  margin-top: var(--_15s21r93);
}
.e8g0a6ch {
  margin-top: var(--_15s21r94);
}
.e8g0a6cl {
  margin-top: var(--_15s21r95);
}
.e8g0a6cp {
  margin-top: var(--_15s21r96);
}
.e8g0a6ct {
  margin-top: var(--_15s21r97);
}
.e8g0a6cx {
  margin-top: var(--_15s21r98);
}
.e8g0a6d1 {
  margin-top: 0;
}
.e8g0a6d5 {
  margin-bottom: var(--_15s21r90);
}
.e8g0a6d9 {
  margin-bottom: var(--_15s21r91);
}
.e8g0a6dd {
  margin-bottom: var(--_15s21r92);
}
.e8g0a6dh {
  margin-bottom: var(--_15s21r93);
}
.e8g0a6dl {
  margin-bottom: var(--_15s21r94);
}
.e8g0a6dp {
  margin-bottom: var(--_15s21r95);
}
.e8g0a6dt {
  margin-bottom: var(--_15s21r96);
}
.e8g0a6dx {
  margin-bottom: var(--_15s21r97);
}
.e8g0a6e1 {
  margin-bottom: var(--_15s21r98);
}
.e8g0a6e5 {
  margin-bottom: 0;
}
.e8g0a6e9 {
  margin-right: var(--_15s21r90);
}
.e8g0a6ed {
  margin-right: var(--_15s21r91);
}
.e8g0a6eh {
  margin-right: var(--_15s21r92);
}
.e8g0a6el {
  margin-right: var(--_15s21r93);
}
.e8g0a6ep {
  margin-right: var(--_15s21r94);
}
.e8g0a6et {
  margin-right: var(--_15s21r95);
}
.e8g0a6ex {
  margin-right: var(--_15s21r96);
}
.e8g0a6f1 {
  margin-right: var(--_15s21r97);
}
.e8g0a6f5 {
  margin-right: var(--_15s21r98);
}
.e8g0a6f9 {
  margin-right: 0;
}
.e8g0a6fd {
  margin-left: var(--_15s21r90);
}
.e8g0a6fh {
  margin-left: var(--_15s21r91);
}
.e8g0a6fl {
  margin-left: var(--_15s21r92);
}
.e8g0a6fp {
  margin-left: var(--_15s21r93);
}
.e8g0a6ft {
  margin-left: var(--_15s21r94);
}
.e8g0a6fx {
  margin-left: var(--_15s21r95);
}
.e8g0a6g1 {
  margin-left: var(--_15s21r96);
}
.e8g0a6g5 {
  margin-left: var(--_15s21r97);
}
.e8g0a6g9 {
  margin-left: var(--_15s21r98);
}
.e8g0a6gd {
  margin-left: 0;
}
.e8g0a6gh {
  align-items: flex-start;
}
.e8g0a6gl {
  align-items: center;
}
.e8g0a6gp {
  align-items: flex-end;
}
.e8g0a6gt {
  justify-content: flex-start;
}
.e8g0a6gx {
  justify-content: center;
}
.e8g0a6h1 {
  justify-content: flex-end;
}
.e8g0a6h5 {
  justify-content: space-between;
}
.e8g0a6h9 {
  flex-direction: row;
}
.e8g0a6hd {
  flex-direction: row-reverse;
}
.e8g0a6hh {
  flex-direction: column;
}
.e8g0a6hl {
  flex-direction: column-reverse;
}
.e8g0a6hp {
  flex-wrap: wrap;
}
.e8g0a6ht {
  flex-wrap: nowrap;
}
.e8g0a6hx {
  flex-shrink: 0;
}
.e8g0a6i1 {
  flex-grow: 0;
}
.e8g0a6i5 {
  flex-grow: 1;
}
.e8g0a6i9 {
  text-align: left;
}
.e8g0a6id {
  text-align: center;
}
.e8g0a6ih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .e8g0a64u {
    display: none;
  }
  .e8g0a64y {
    display: block;
  }
  .e8g0a652 {
    display: inline;
  }
  .e8g0a656 {
    display: inline-block;
  }
  .e8g0a65a {
    display: flex;
  }
  .e8g0a65e {
    position: relative;
  }
  .e8g0a65i {
    position: absolute;
  }
  .e8g0a65m {
    position: fixed;
  }
  .e8g0a65q {
    position: sticky;
  }
  .e8g0a65u {
    border-radius: 0;
  }
  .e8g0a65y {
    border-radius: 9999px;
  }
  .e8g0a662 {
    border-radius: var(--_15s21r9b);
  }
  .e8g0a666 {
    border-radius: var(--_15s21r9c);
  }
  .e8g0a66a {
    border-radius: var(--_15s21r9d);
  }
  .e8g0a66e {
    border-radius: var(--_15s21r9e);
  }
  .e8g0a66i {
    gap: var(--_15s21r90);
  }
  .e8g0a66m {
    gap: var(--_15s21r91);
  }
  .e8g0a66q {
    gap: var(--_15s21r92);
  }
  .e8g0a66u {
    gap: var(--_15s21r93);
  }
  .e8g0a66y {
    gap: var(--_15s21r94);
  }
  .e8g0a672 {
    gap: var(--_15s21r95);
  }
  .e8g0a676 {
    gap: var(--_15s21r96);
  }
  .e8g0a67a {
    gap: var(--_15s21r97);
  }
  .e8g0a67e {
    gap: var(--_15s21r98);
  }
  .e8g0a67i {
    gap: 0;
  }
  .e8g0a67m {
    padding-top: var(--_15s21r90);
  }
  .e8g0a67q {
    padding-top: var(--_15s21r91);
  }
  .e8g0a67u {
    padding-top: var(--_15s21r92);
  }
  .e8g0a67y {
    padding-top: var(--_15s21r93);
  }
  .e8g0a682 {
    padding-top: var(--_15s21r94);
  }
  .e8g0a686 {
    padding-top: var(--_15s21r95);
  }
  .e8g0a68a {
    padding-top: var(--_15s21r96);
  }
  .e8g0a68e {
    padding-top: var(--_15s21r97);
  }
  .e8g0a68i {
    padding-top: var(--_15s21r98);
  }
  .e8g0a68m {
    padding-top: 0;
  }
  .e8g0a68q {
    padding-bottom: var(--_15s21r90);
  }
  .e8g0a68u {
    padding-bottom: var(--_15s21r91);
  }
  .e8g0a68y {
    padding-bottom: var(--_15s21r92);
  }
  .e8g0a692 {
    padding-bottom: var(--_15s21r93);
  }
  .e8g0a696 {
    padding-bottom: var(--_15s21r94);
  }
  .e8g0a69a {
    padding-bottom: var(--_15s21r95);
  }
  .e8g0a69e {
    padding-bottom: var(--_15s21r96);
  }
  .e8g0a69i {
    padding-bottom: var(--_15s21r97);
  }
  .e8g0a69m {
    padding-bottom: var(--_15s21r98);
  }
  .e8g0a69q {
    padding-bottom: 0;
  }
  .e8g0a69u {
    padding-right: var(--_15s21r90);
  }
  .e8g0a69y {
    padding-right: var(--_15s21r91);
  }
  .e8g0a6a2 {
    padding-right: var(--_15s21r92);
  }
  .e8g0a6a6 {
    padding-right: var(--_15s21r93);
  }
  .e8g0a6aa {
    padding-right: var(--_15s21r94);
  }
  .e8g0a6ae {
    padding-right: var(--_15s21r95);
  }
  .e8g0a6ai {
    padding-right: var(--_15s21r96);
  }
  .e8g0a6am {
    padding-right: var(--_15s21r97);
  }
  .e8g0a6aq {
    padding-right: var(--_15s21r98);
  }
  .e8g0a6au {
    padding-right: 0;
  }
  .e8g0a6ay {
    padding-left: var(--_15s21r90);
  }
  .e8g0a6b2 {
    padding-left: var(--_15s21r91);
  }
  .e8g0a6b6 {
    padding-left: var(--_15s21r92);
  }
  .e8g0a6ba {
    padding-left: var(--_15s21r93);
  }
  .e8g0a6be {
    padding-left: var(--_15s21r94);
  }
  .e8g0a6bi {
    padding-left: var(--_15s21r95);
  }
  .e8g0a6bm {
    padding-left: var(--_15s21r96);
  }
  .e8g0a6bq {
    padding-left: var(--_15s21r97);
  }
  .e8g0a6bu {
    padding-left: var(--_15s21r98);
  }
  .e8g0a6by {
    padding-left: 0;
  }
  .e8g0a6c2 {
    margin-top: var(--_15s21r90);
  }
  .e8g0a6c6 {
    margin-top: var(--_15s21r91);
  }
  .e8g0a6ca {
    margin-top: var(--_15s21r92);
  }
  .e8g0a6ce {
    margin-top: var(--_15s21r93);
  }
  .e8g0a6ci {
    margin-top: var(--_15s21r94);
  }
  .e8g0a6cm {
    margin-top: var(--_15s21r95);
  }
  .e8g0a6cq {
    margin-top: var(--_15s21r96);
  }
  .e8g0a6cu {
    margin-top: var(--_15s21r97);
  }
  .e8g0a6cy {
    margin-top: var(--_15s21r98);
  }
  .e8g0a6d2 {
    margin-top: 0;
  }
  .e8g0a6d6 {
    margin-bottom: var(--_15s21r90);
  }
  .e8g0a6da {
    margin-bottom: var(--_15s21r91);
  }
  .e8g0a6de {
    margin-bottom: var(--_15s21r92);
  }
  .e8g0a6di {
    margin-bottom: var(--_15s21r93);
  }
  .e8g0a6dm {
    margin-bottom: var(--_15s21r94);
  }
  .e8g0a6dq {
    margin-bottom: var(--_15s21r95);
  }
  .e8g0a6du {
    margin-bottom: var(--_15s21r96);
  }
  .e8g0a6dy {
    margin-bottom: var(--_15s21r97);
  }
  .e8g0a6e2 {
    margin-bottom: var(--_15s21r98);
  }
  .e8g0a6e6 {
    margin-bottom: 0;
  }
  .e8g0a6ea {
    margin-right: var(--_15s21r90);
  }
  .e8g0a6ee {
    margin-right: var(--_15s21r91);
  }
  .e8g0a6ei {
    margin-right: var(--_15s21r92);
  }
  .e8g0a6em {
    margin-right: var(--_15s21r93);
  }
  .e8g0a6eq {
    margin-right: var(--_15s21r94);
  }
  .e8g0a6eu {
    margin-right: var(--_15s21r95);
  }
  .e8g0a6ey {
    margin-right: var(--_15s21r96);
  }
  .e8g0a6f2 {
    margin-right: var(--_15s21r97);
  }
  .e8g0a6f6 {
    margin-right: var(--_15s21r98);
  }
  .e8g0a6fa {
    margin-right: 0;
  }
  .e8g0a6fe {
    margin-left: var(--_15s21r90);
  }
  .e8g0a6fi {
    margin-left: var(--_15s21r91);
  }
  .e8g0a6fm {
    margin-left: var(--_15s21r92);
  }
  .e8g0a6fq {
    margin-left: var(--_15s21r93);
  }
  .e8g0a6fu {
    margin-left: var(--_15s21r94);
  }
  .e8g0a6fy {
    margin-left: var(--_15s21r95);
  }
  .e8g0a6g2 {
    margin-left: var(--_15s21r96);
  }
  .e8g0a6g6 {
    margin-left: var(--_15s21r97);
  }
  .e8g0a6ga {
    margin-left: var(--_15s21r98);
  }
  .e8g0a6ge {
    margin-left: 0;
  }
  .e8g0a6gi {
    align-items: flex-start;
  }
  .e8g0a6gm {
    align-items: center;
  }
  .e8g0a6gq {
    align-items: flex-end;
  }
  .e8g0a6gu {
    justify-content: flex-start;
  }
  .e8g0a6gy {
    justify-content: center;
  }
  .e8g0a6h2 {
    justify-content: flex-end;
  }
  .e8g0a6h6 {
    justify-content: space-between;
  }
  .e8g0a6ha {
    flex-direction: row;
  }
  .e8g0a6he {
    flex-direction: row-reverse;
  }
  .e8g0a6hi {
    flex-direction: column;
  }
  .e8g0a6hm {
    flex-direction: column-reverse;
  }
  .e8g0a6hq {
    flex-wrap: wrap;
  }
  .e8g0a6hu {
    flex-wrap: nowrap;
  }
  .e8g0a6hy {
    flex-shrink: 0;
  }
  .e8g0a6i2 {
    flex-grow: 0;
  }
  .e8g0a6i6 {
    flex-grow: 1;
  }
  .e8g0a6ia {
    text-align: left;
  }
  .e8g0a6ie {
    text-align: center;
  }
  .e8g0a6ii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .e8g0a64v {
    display: none;
  }
  .e8g0a64z {
    display: block;
  }
  .e8g0a653 {
    display: inline;
  }
  .e8g0a657 {
    display: inline-block;
  }
  .e8g0a65b {
    display: flex;
  }
  .e8g0a65f {
    position: relative;
  }
  .e8g0a65j {
    position: absolute;
  }
  .e8g0a65n {
    position: fixed;
  }
  .e8g0a65r {
    position: sticky;
  }
  .e8g0a65v {
    border-radius: 0;
  }
  .e8g0a65z {
    border-radius: 9999px;
  }
  .e8g0a663 {
    border-radius: var(--_15s21r9b);
  }
  .e8g0a667 {
    border-radius: var(--_15s21r9c);
  }
  .e8g0a66b {
    border-radius: var(--_15s21r9d);
  }
  .e8g0a66f {
    border-radius: var(--_15s21r9e);
  }
  .e8g0a66j {
    gap: var(--_15s21r90);
  }
  .e8g0a66n {
    gap: var(--_15s21r91);
  }
  .e8g0a66r {
    gap: var(--_15s21r92);
  }
  .e8g0a66v {
    gap: var(--_15s21r93);
  }
  .e8g0a66z {
    gap: var(--_15s21r94);
  }
  .e8g0a673 {
    gap: var(--_15s21r95);
  }
  .e8g0a677 {
    gap: var(--_15s21r96);
  }
  .e8g0a67b {
    gap: var(--_15s21r97);
  }
  .e8g0a67f {
    gap: var(--_15s21r98);
  }
  .e8g0a67j {
    gap: 0;
  }
  .e8g0a67n {
    padding-top: var(--_15s21r90);
  }
  .e8g0a67r {
    padding-top: var(--_15s21r91);
  }
  .e8g0a67v {
    padding-top: var(--_15s21r92);
  }
  .e8g0a67z {
    padding-top: var(--_15s21r93);
  }
  .e8g0a683 {
    padding-top: var(--_15s21r94);
  }
  .e8g0a687 {
    padding-top: var(--_15s21r95);
  }
  .e8g0a68b {
    padding-top: var(--_15s21r96);
  }
  .e8g0a68f {
    padding-top: var(--_15s21r97);
  }
  .e8g0a68j {
    padding-top: var(--_15s21r98);
  }
  .e8g0a68n {
    padding-top: 0;
  }
  .e8g0a68r {
    padding-bottom: var(--_15s21r90);
  }
  .e8g0a68v {
    padding-bottom: var(--_15s21r91);
  }
  .e8g0a68z {
    padding-bottom: var(--_15s21r92);
  }
  .e8g0a693 {
    padding-bottom: var(--_15s21r93);
  }
  .e8g0a697 {
    padding-bottom: var(--_15s21r94);
  }
  .e8g0a69b {
    padding-bottom: var(--_15s21r95);
  }
  .e8g0a69f {
    padding-bottom: var(--_15s21r96);
  }
  .e8g0a69j {
    padding-bottom: var(--_15s21r97);
  }
  .e8g0a69n {
    padding-bottom: var(--_15s21r98);
  }
  .e8g0a69r {
    padding-bottom: 0;
  }
  .e8g0a69v {
    padding-right: var(--_15s21r90);
  }
  .e8g0a69z {
    padding-right: var(--_15s21r91);
  }
  .e8g0a6a3 {
    padding-right: var(--_15s21r92);
  }
  .e8g0a6a7 {
    padding-right: var(--_15s21r93);
  }
  .e8g0a6ab {
    padding-right: var(--_15s21r94);
  }
  .e8g0a6af {
    padding-right: var(--_15s21r95);
  }
  .e8g0a6aj {
    padding-right: var(--_15s21r96);
  }
  .e8g0a6an {
    padding-right: var(--_15s21r97);
  }
  .e8g0a6ar {
    padding-right: var(--_15s21r98);
  }
  .e8g0a6av {
    padding-right: 0;
  }
  .e8g0a6az {
    padding-left: var(--_15s21r90);
  }
  .e8g0a6b3 {
    padding-left: var(--_15s21r91);
  }
  .e8g0a6b7 {
    padding-left: var(--_15s21r92);
  }
  .e8g0a6bb {
    padding-left: var(--_15s21r93);
  }
  .e8g0a6bf {
    padding-left: var(--_15s21r94);
  }
  .e8g0a6bj {
    padding-left: var(--_15s21r95);
  }
  .e8g0a6bn {
    padding-left: var(--_15s21r96);
  }
  .e8g0a6br {
    padding-left: var(--_15s21r97);
  }
  .e8g0a6bv {
    padding-left: var(--_15s21r98);
  }
  .e8g0a6bz {
    padding-left: 0;
  }
  .e8g0a6c3 {
    margin-top: var(--_15s21r90);
  }
  .e8g0a6c7 {
    margin-top: var(--_15s21r91);
  }
  .e8g0a6cb {
    margin-top: var(--_15s21r92);
  }
  .e8g0a6cf {
    margin-top: var(--_15s21r93);
  }
  .e8g0a6cj {
    margin-top: var(--_15s21r94);
  }
  .e8g0a6cn {
    margin-top: var(--_15s21r95);
  }
  .e8g0a6cr {
    margin-top: var(--_15s21r96);
  }
  .e8g0a6cv {
    margin-top: var(--_15s21r97);
  }
  .e8g0a6cz {
    margin-top: var(--_15s21r98);
  }
  .e8g0a6d3 {
    margin-top: 0;
  }
  .e8g0a6d7 {
    margin-bottom: var(--_15s21r90);
  }
  .e8g0a6db {
    margin-bottom: var(--_15s21r91);
  }
  .e8g0a6df {
    margin-bottom: var(--_15s21r92);
  }
  .e8g0a6dj {
    margin-bottom: var(--_15s21r93);
  }
  .e8g0a6dn {
    margin-bottom: var(--_15s21r94);
  }
  .e8g0a6dr {
    margin-bottom: var(--_15s21r95);
  }
  .e8g0a6dv {
    margin-bottom: var(--_15s21r96);
  }
  .e8g0a6dz {
    margin-bottom: var(--_15s21r97);
  }
  .e8g0a6e3 {
    margin-bottom: var(--_15s21r98);
  }
  .e8g0a6e7 {
    margin-bottom: 0;
  }
  .e8g0a6eb {
    margin-right: var(--_15s21r90);
  }
  .e8g0a6ef {
    margin-right: var(--_15s21r91);
  }
  .e8g0a6ej {
    margin-right: var(--_15s21r92);
  }
  .e8g0a6en {
    margin-right: var(--_15s21r93);
  }
  .e8g0a6er {
    margin-right: var(--_15s21r94);
  }
  .e8g0a6ev {
    margin-right: var(--_15s21r95);
  }
  .e8g0a6ez {
    margin-right: var(--_15s21r96);
  }
  .e8g0a6f3 {
    margin-right: var(--_15s21r97);
  }
  .e8g0a6f7 {
    margin-right: var(--_15s21r98);
  }
  .e8g0a6fb {
    margin-right: 0;
  }
  .e8g0a6ff {
    margin-left: var(--_15s21r90);
  }
  .e8g0a6fj {
    margin-left: var(--_15s21r91);
  }
  .e8g0a6fn {
    margin-left: var(--_15s21r92);
  }
  .e8g0a6fr {
    margin-left: var(--_15s21r93);
  }
  .e8g0a6fv {
    margin-left: var(--_15s21r94);
  }
  .e8g0a6fz {
    margin-left: var(--_15s21r95);
  }
  .e8g0a6g3 {
    margin-left: var(--_15s21r96);
  }
  .e8g0a6g7 {
    margin-left: var(--_15s21r97);
  }
  .e8g0a6gb {
    margin-left: var(--_15s21r98);
  }
  .e8g0a6gf {
    margin-left: 0;
  }
  .e8g0a6gj {
    align-items: flex-start;
  }
  .e8g0a6gn {
    align-items: center;
  }
  .e8g0a6gr {
    align-items: flex-end;
  }
  .e8g0a6gv {
    justify-content: flex-start;
  }
  .e8g0a6gz {
    justify-content: center;
  }
  .e8g0a6h3 {
    justify-content: flex-end;
  }
  .e8g0a6h7 {
    justify-content: space-between;
  }
  .e8g0a6hb {
    flex-direction: row;
  }
  .e8g0a6hf {
    flex-direction: row-reverse;
  }
  .e8g0a6hj {
    flex-direction: column;
  }
  .e8g0a6hn {
    flex-direction: column-reverse;
  }
  .e8g0a6hr {
    flex-wrap: wrap;
  }
  .e8g0a6hv {
    flex-wrap: nowrap;
  }
  .e8g0a6hz {
    flex-shrink: 0;
  }
  .e8g0a6i3 {
    flex-grow: 0;
  }
  .e8g0a6i7 {
    flex-grow: 1;
  }
  .e8g0a6ib {
    text-align: left;
  }
  .e8g0a6if {
    text-align: center;
  }
  .e8g0a6ij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .e8g0a64w {
    display: none;
  }
  .e8g0a650 {
    display: block;
  }
  .e8g0a654 {
    display: inline;
  }
  .e8g0a658 {
    display: inline-block;
  }
  .e8g0a65c {
    display: flex;
  }
  .e8g0a65g {
    position: relative;
  }
  .e8g0a65k {
    position: absolute;
  }
  .e8g0a65o {
    position: fixed;
  }
  .e8g0a65s {
    position: sticky;
  }
  .e8g0a65w {
    border-radius: 0;
  }
  .e8g0a660 {
    border-radius: 9999px;
  }
  .e8g0a664 {
    border-radius: var(--_15s21r9b);
  }
  .e8g0a668 {
    border-radius: var(--_15s21r9c);
  }
  .e8g0a66c {
    border-radius: var(--_15s21r9d);
  }
  .e8g0a66g {
    border-radius: var(--_15s21r9e);
  }
  .e8g0a66k {
    gap: var(--_15s21r90);
  }
  .e8g0a66o {
    gap: var(--_15s21r91);
  }
  .e8g0a66s {
    gap: var(--_15s21r92);
  }
  .e8g0a66w {
    gap: var(--_15s21r93);
  }
  .e8g0a670 {
    gap: var(--_15s21r94);
  }
  .e8g0a674 {
    gap: var(--_15s21r95);
  }
  .e8g0a678 {
    gap: var(--_15s21r96);
  }
  .e8g0a67c {
    gap: var(--_15s21r97);
  }
  .e8g0a67g {
    gap: var(--_15s21r98);
  }
  .e8g0a67k {
    gap: 0;
  }
  .e8g0a67o {
    padding-top: var(--_15s21r90);
  }
  .e8g0a67s {
    padding-top: var(--_15s21r91);
  }
  .e8g0a67w {
    padding-top: var(--_15s21r92);
  }
  .e8g0a680 {
    padding-top: var(--_15s21r93);
  }
  .e8g0a684 {
    padding-top: var(--_15s21r94);
  }
  .e8g0a688 {
    padding-top: var(--_15s21r95);
  }
  .e8g0a68c {
    padding-top: var(--_15s21r96);
  }
  .e8g0a68g {
    padding-top: var(--_15s21r97);
  }
  .e8g0a68k {
    padding-top: var(--_15s21r98);
  }
  .e8g0a68o {
    padding-top: 0;
  }
  .e8g0a68s {
    padding-bottom: var(--_15s21r90);
  }
  .e8g0a68w {
    padding-bottom: var(--_15s21r91);
  }
  .e8g0a690 {
    padding-bottom: var(--_15s21r92);
  }
  .e8g0a694 {
    padding-bottom: var(--_15s21r93);
  }
  .e8g0a698 {
    padding-bottom: var(--_15s21r94);
  }
  .e8g0a69c {
    padding-bottom: var(--_15s21r95);
  }
  .e8g0a69g {
    padding-bottom: var(--_15s21r96);
  }
  .e8g0a69k {
    padding-bottom: var(--_15s21r97);
  }
  .e8g0a69o {
    padding-bottom: var(--_15s21r98);
  }
  .e8g0a69s {
    padding-bottom: 0;
  }
  .e8g0a69w {
    padding-right: var(--_15s21r90);
  }
  .e8g0a6a0 {
    padding-right: var(--_15s21r91);
  }
  .e8g0a6a4 {
    padding-right: var(--_15s21r92);
  }
  .e8g0a6a8 {
    padding-right: var(--_15s21r93);
  }
  .e8g0a6ac {
    padding-right: var(--_15s21r94);
  }
  .e8g0a6ag {
    padding-right: var(--_15s21r95);
  }
  .e8g0a6ak {
    padding-right: var(--_15s21r96);
  }
  .e8g0a6ao {
    padding-right: var(--_15s21r97);
  }
  .e8g0a6as {
    padding-right: var(--_15s21r98);
  }
  .e8g0a6aw {
    padding-right: 0;
  }
  .e8g0a6b0 {
    padding-left: var(--_15s21r90);
  }
  .e8g0a6b4 {
    padding-left: var(--_15s21r91);
  }
  .e8g0a6b8 {
    padding-left: var(--_15s21r92);
  }
  .e8g0a6bc {
    padding-left: var(--_15s21r93);
  }
  .e8g0a6bg {
    padding-left: var(--_15s21r94);
  }
  .e8g0a6bk {
    padding-left: var(--_15s21r95);
  }
  .e8g0a6bo {
    padding-left: var(--_15s21r96);
  }
  .e8g0a6bs {
    padding-left: var(--_15s21r97);
  }
  .e8g0a6bw {
    padding-left: var(--_15s21r98);
  }
  .e8g0a6c0 {
    padding-left: 0;
  }
  .e8g0a6c4 {
    margin-top: var(--_15s21r90);
  }
  .e8g0a6c8 {
    margin-top: var(--_15s21r91);
  }
  .e8g0a6cc {
    margin-top: var(--_15s21r92);
  }
  .e8g0a6cg {
    margin-top: var(--_15s21r93);
  }
  .e8g0a6ck {
    margin-top: var(--_15s21r94);
  }
  .e8g0a6co {
    margin-top: var(--_15s21r95);
  }
  .e8g0a6cs {
    margin-top: var(--_15s21r96);
  }
  .e8g0a6cw {
    margin-top: var(--_15s21r97);
  }
  .e8g0a6d0 {
    margin-top: var(--_15s21r98);
  }
  .e8g0a6d4 {
    margin-top: 0;
  }
  .e8g0a6d8 {
    margin-bottom: var(--_15s21r90);
  }
  .e8g0a6dc {
    margin-bottom: var(--_15s21r91);
  }
  .e8g0a6dg {
    margin-bottom: var(--_15s21r92);
  }
  .e8g0a6dk {
    margin-bottom: var(--_15s21r93);
  }
  .e8g0a6do {
    margin-bottom: var(--_15s21r94);
  }
  .e8g0a6ds {
    margin-bottom: var(--_15s21r95);
  }
  .e8g0a6dw {
    margin-bottom: var(--_15s21r96);
  }
  .e8g0a6e0 {
    margin-bottom: var(--_15s21r97);
  }
  .e8g0a6e4 {
    margin-bottom: var(--_15s21r98);
  }
  .e8g0a6e8 {
    margin-bottom: 0;
  }
  .e8g0a6ec {
    margin-right: var(--_15s21r90);
  }
  .e8g0a6eg {
    margin-right: var(--_15s21r91);
  }
  .e8g0a6ek {
    margin-right: var(--_15s21r92);
  }
  .e8g0a6eo {
    margin-right: var(--_15s21r93);
  }
  .e8g0a6es {
    margin-right: var(--_15s21r94);
  }
  .e8g0a6ew {
    margin-right: var(--_15s21r95);
  }
  .e8g0a6f0 {
    margin-right: var(--_15s21r96);
  }
  .e8g0a6f4 {
    margin-right: var(--_15s21r97);
  }
  .e8g0a6f8 {
    margin-right: var(--_15s21r98);
  }
  .e8g0a6fc {
    margin-right: 0;
  }
  .e8g0a6fg {
    margin-left: var(--_15s21r90);
  }
  .e8g0a6fk {
    margin-left: var(--_15s21r91);
  }
  .e8g0a6fo {
    margin-left: var(--_15s21r92);
  }
  .e8g0a6fs {
    margin-left: var(--_15s21r93);
  }
  .e8g0a6fw {
    margin-left: var(--_15s21r94);
  }
  .e8g0a6g0 {
    margin-left: var(--_15s21r95);
  }
  .e8g0a6g4 {
    margin-left: var(--_15s21r96);
  }
  .e8g0a6g8 {
    margin-left: var(--_15s21r97);
  }
  .e8g0a6gc {
    margin-left: var(--_15s21r98);
  }
  .e8g0a6gg {
    margin-left: 0;
  }
  .e8g0a6gk {
    align-items: flex-start;
  }
  .e8g0a6go {
    align-items: center;
  }
  .e8g0a6gs {
    align-items: flex-end;
  }
  .e8g0a6gw {
    justify-content: flex-start;
  }
  .e8g0a6h0 {
    justify-content: center;
  }
  .e8g0a6h4 {
    justify-content: flex-end;
  }
  .e8g0a6h8 {
    justify-content: space-between;
  }
  .e8g0a6hc {
    flex-direction: row;
  }
  .e8g0a6hg {
    flex-direction: row-reverse;
  }
  .e8g0a6hk {
    flex-direction: column;
  }
  .e8g0a6ho {
    flex-direction: column-reverse;
  }
  .e8g0a6hs {
    flex-wrap: wrap;
  }
  .e8g0a6hw {
    flex-wrap: nowrap;
  }
  .e8g0a6i0 {
    flex-shrink: 0;
  }
  .e8g0a6i4 {
    flex-grow: 0;
  }
  .e8g0a6i8 {
    flex-grow: 1;
  }
  .e8g0a6ic {
    text-align: left;
  }
  .e8g0a6ig {
    text-align: center;
  }
  .e8g0a6ik {
    text-align: right;
  }
}
.dlsh340 {
  --_15s21r90: 24px;
  --_15s21r91: 8px;
  --_15s21r92: 12px;
  --_15s21r93: 16px;
  --_15s21r94: 24px;
  --_15s21r95: 32px;
  --_15s21r96: 48px;
  --_15s21r97: 64px;
  --_15s21r98: 96px;
  --_15s21r99: 48px;
  --_15s21r9a: 4px;
  --_15s21r9b: 4px;
  --_15s21r9c: 8px;
  --_15s21r9d: 16px;
  --_15s21r9e: 24px;
  --_15s21r9f: #e60278;
  --_15s21r9g: #f8b1dc;
  --_15s21r9h: #fdc221;
  --_15s21r9i: #fee384;
  --_15s21r9j: #b91e1e;
  --_15s21r9k: #fb999a;
  --_15s21r9l: #838fa5;
  --_15s21r9m: rgba(153, 191, 247, 0.7);
  --_15s21r9n: #1e47a9;
  --_15s21r9o: #99bff7;
  --_15s21r9p: #1d559d;
  --_15s21r9q: #98c9f1;
  --_15s21r9r: #2e3849;
  --_15s21r9t: #eaecf1;
  --_15s21r9s: #fff;
  --_15s21r9u: #12784f;
  --_15s21r9v: #8bdec5;
  --_15s21r9w: #7f35a9;
  --_15s21r9x: #e1b2f5;
  --_15s21r9y: 2px;
  --_15s21r9z: 4px;
  --_15s21r910: 6px;
  --_15s21r911: 400px;
  --_15s21r912: 660px;
  --_15s21r913: 940px;
  --_15s21r914: 1280px;
  --_15s21r915: #e60278;
  --_15s21r916: #f8b1dc;
  --_15s21r917: #723d02;
  --_15s21r918: #fee384;
  --_15s21r919: #b91e1e;
  --_15s21r91a: #fb999a;
  --_15s21r91b: #1e47a9;
  --_15s21r91c: #99bff7;
  --_15s21r91d: #1d559d;
  --_15s21r91e: #98c9f1;
  --_15s21r91f: #2e3849;
  --_15s21r91h: #fff;
  --_15s21r91g: #2e3849;
  --_15s21r91i: #5b2084;
  --_15s21r91j: #f0d6fa;
  --_15s21r91k: #2e3849;
  --_15s21r91l: #fff;
  --_15s21r91m: #12784f;
  --_15s21r91n: #8bdec5;
  --_15s21r91o: #7f35a9;
  --_15s21r91p: #e1b2f5;
  --_15s21r91q: #5a6881;
  --_15s21r91r: hsla(0, 0%, 100%, 0.65);
  --_15s21r91s: #fff;
  --_15s21r91t: #1c2330;
  --_15s21r91u: #051a49;
  --_15s21r91v: #e60278;
  --_15s21r91w: #cd026b;
  --_15s21r91x: #fd0585;
  --_15s21r91y: #feeffa;
  --_15s21r91z: #fdd7f3;
  --_15s21r920: #fde3f6;
  --_15s21r921: #fdc221;
  --_15s21r922: #fef8de;
  --_15s21r923: #b91e1e;
  --_15s21r924: #a31a1a;
  --_15s21r925: #db1616;
  --_15s21r926: #ffe3e2;
  --_15s21r927: #fef3f3;
  --_15s21r928: #fcdbdb;
  --_15s21r929: #fde7e7;
  --_15s21r92a: #1e47a9;
  --_15s21r92b: #1a3e93;
  --_15s21r92c: #2455c9;
  --_15s21r92d: #f0f7fe;
  --_15s21r92e: #d8eafc;
  --_15s21r92f: #e4f1fd;
  --_15s21r92g: #1d559d;
  --_15s21r92h: #e3f2fb;
  --_15s21r92i: #2e3849;
  --_15s21r92j: #242c39;
  --_15s21r92k: #384459;
  --_15s21r92l: #f3f5f7;
  --_15s21r92m: #f3f5f7;
  --_15s21r92n: #e4e8ed;
  --_15s21r92o: #ebeff2;
  --_15s21r92p: #12784f;
  --_15s21r92q: #e2f7f1;
  --_15s21r92r: #7f35a9;
  --_15s21r92s: #f9ebfd;
  --_15s21r92t: #fff;
  --_15s21r92u: #1c2330;
  --_15s21r92v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_15s21r92w: 783;
  --_15s21r92x: 1057;
  --_15s21r92y: -274;
  --_15s21r92z: 0;
  --_15s21r930: 1000;
  --_15s21r93v: 18px;
  --_15s21r93w: 27.094px;
  --_15s21r93x: 14.094px;
  --_15s21r93y: -0.3611em;
  --_15s21r93z: -0.3611em;
  --_15s21r940: 18px;
  --_15s21r941: 27.094px;
  --_15s21r942: 14.094px;
  --_15s21r943: -0.3611em;
  --_15s21r944: -0.3611em;
  --_15s21r93l: 16px;
  --_15s21r93m: 24.528px;
  --_15s21r93n: 12.528px;
  --_15s21r93o: -0.375em;
  --_15s21r93p: -0.375em;
  --_15s21r93q: 16px;
  --_15s21r93r: 24.528px;
  --_15s21r93s: 12.528px;
  --_15s21r93t: -0.375em;
  --_15s21r93u: -0.375em;
  --_15s21r93b: 14px;
  --_15s21r93c: 20.962px;
  --_15s21r93d: 10.962px;
  --_15s21r93e: -0.3571em;
  --_15s21r93f: -0.3571em;
  --_15s21r93g: 14px;
  --_15s21r93h: 20.962px;
  --_15s21r93i: 10.962px;
  --_15s21r93j: -0.3571em;
  --_15s21r93k: -0.3571em;
  --_15s21r931: 12px;
  --_15s21r932: 18.396px;
  --_15s21r933: 9.396px;
  --_15s21r934: -0.375em;
  --_15s21r935: -0.375em;
  --_15s21r936: 12px;
  --_15s21r937: 18.396px;
  --_15s21r938: 9.396px;
  --_15s21r939: -0.375em;
  --_15s21r93a: -0.375em;
  --_15s21r945: 400;
  --_15s21r946: 600;
  --_15s21r947: 700;
  --_15s21r948: 28px;
  --_15s21r949: 32.924px;
  --_15s21r94a: 21.924px;
  --_15s21r94b: -0.1964em;
  --_15s21r94c: -0.1964em;
  --_15s21r94d: 36px;
  --_15s21r94e: 42.188px;
  --_15s21r94f: 28.188px;
  --_15s21r94g: -0.1944em;
  --_15s21r94h: -0.1944em;
  --_15s21r94i: 24px;
  --_15s21r94j: 29.792px;
  --_15s21r94k: 18.792px;
  --_15s21r94l: -0.2292em;
  --_15s21r94m: -0.2292em;
  --_15s21r94n: 30px;
  --_15s21r94o: 36.49px;
  --_15s21r94p: 23.49px;
  --_15s21r94q: -0.2167em;
  --_15s21r94r: -0.2167em;
  --_15s21r94s: 22px;
  --_15s21r94t: 27.226px;
  --_15s21r94u: 17.226px;
  --_15s21r94v: -0.2273em;
  --_15s21r94w: -0.2273em;
  --_15s21r94x: 24px;
  --_15s21r94y: 29.792px;
  --_15s21r94z: 18.792px;
  --_15s21r950: -0.2292em;
  --_15s21r951: -0.2292em;
  --_15s21r952: 20px;
  --_15s21r953: 24.66px;
  --_15s21r954: 15.66px;
  --_15s21r955: -0.225em;
  --_15s21r956: -0.225em;
  --_15s21r957: 20px;
  --_15s21r958: 24.66px;
  --_15s21r959: 15.66px;
  --_15s21r95a: -0.225em;
  --_15s21r95b: -0.225em;
  --_15s21r95c: 400;
  --_15s21r95d: 600;
  --_15s21r95e: underline;
  --_15s21r95f: 24px;
  --_15s21r95g: 20px;
  --_15s21r95h: transform 0.125s ease, opacity 0.125s ease;
  --_15s21r95i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_15s21r95j: scale(0.95);
  --_15s21r95k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_15s21r95l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_15s21r95m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._17i4nh34 {
  font-size: var(--_17i4nh30);
  line-height: var(--_17i4nh31);
}
._17i4nh34:before {
  content: "";
  display: table;
  margin-bottom: var(--_17i4nh32);
}
._17i4nh34:after {
  content: "";
  display: table;
  margin-top: var(--_17i4nh33);
}
._9lz7ur0 {
  font-family: var(--_15s21r92v);
}
._9lz7ur1 {
  font-weight: var(--_15s21r945);
}
._9lz7ur2 {
  font-weight: var(--_15s21r946);
}
._9lz7ur3 {
  font-weight: var(--_15s21r947);
}
._9lz7ur4 {
  --_17i4nh30: var(--_15s21r931);
  --_17i4nh31: var(--_15s21r932);
  --_17i4nh32: var(--_15s21r934);
  --_17i4nh33: var(--_15s21r935);
}
._9lz7ur6 {
  --_17i4nh30: var(--_15s21r93b);
  --_17i4nh31: var(--_15s21r93c);
  --_17i4nh32: var(--_15s21r93e);
  --_17i4nh33: var(--_15s21r93f);
}
._9lz7ur8 {
  --_17i4nh30: var(--_15s21r93l);
  --_17i4nh31: var(--_15s21r93m);
  --_17i4nh32: var(--_15s21r93o);
  --_17i4nh33: var(--_15s21r93p);
}
._9lz7ura {
  --_17i4nh30: var(--_15s21r93v);
  --_17i4nh31: var(--_15s21r93w);
  --_17i4nh32: var(--_15s21r93y);
  --_17i4nh33: var(--_15s21r93z);
}
._9lz7urc {
  font-size: var(--_15s21r931);
  line-height: var(--_15s21r932);
}
._9lz7urd {
  font-size: var(--_15s21r93b);
  line-height: var(--_15s21r93c);
}
._9lz7ure {
  font-size: var(--_15s21r93l);
  line-height: var(--_15s21r93m);
}
._9lz7urf {
  font-size: var(--_15s21r93v);
  line-height: var(--_15s21r93w);
}
._9lz7urg {
  font-weight: var(--_15s21r95c);
}
._9lz7urh {
  font-weight: var(--_15s21r95d);
}
._9lz7uri {
  --_17i4nh30: var(--_15s21r948);
  --_17i4nh31: var(--_15s21r949);
  --_17i4nh32: var(--_15s21r94b);
  --_17i4nh33: var(--_15s21r94c);
}
._9lz7urk {
  --_17i4nh30: var(--_15s21r94i);
  --_17i4nh31: var(--_15s21r94j);
  --_17i4nh32: var(--_15s21r94l);
  --_17i4nh33: var(--_15s21r94m);
}
._9lz7urm {
  --_17i4nh30: var(--_15s21r94s);
  --_17i4nh31: var(--_15s21r94t);
  --_17i4nh32: var(--_15s21r94v);
  --_17i4nh33: var(--_15s21r94w);
}
._9lz7uro {
  --_17i4nh30: var(--_15s21r952);
  --_17i4nh31: var(--_15s21r953);
  --_17i4nh32: var(--_15s21r955);
  --_17i4nh33: var(--_15s21r956);
}
html:not(.e8g0a610) ._9lz7ur10 {
  --_9lz7urq: var(--_15s21r919);
  --_9lz7urr: var(--_15s21r917);
  --_9lz7urs: var(--_15s21r91d);
  --_9lz7urt: var(--_15s21r91o);
  --_9lz7uru: var(--_15s21r91m);
  --_9lz7urv: var(--_15s21r915);
  --_9lz7urw: var(--_15s21r91b);
  --_9lz7urx: var(--_15s21r91k);
  --_9lz7ury: var(--_15s21r91q);
  --_9lz7urz: var(--_15s21r91f);
}
html:not(.e8g0a610) ._9lz7ur11 {
  --_9lz7urq: var(--_15s21r91a);
  --_9lz7urr: var(--_15s21r918);
  --_9lz7urs: var(--_15s21r91e);
  --_9lz7urt: var(--_15s21r91p);
  --_9lz7uru: var(--_15s21r91n);
  --_9lz7urv: var(--_15s21r916);
  --_9lz7urw: var(--_15s21r91c);
  --_9lz7urx: var(--_15s21r91l);
  --_9lz7ury: var(--_15s21r91r);
  --_9lz7urz: var(--_15s21r91h);
}
html.e8g0a610 ._9lz7ur12 {
  --_9lz7urq: var(--_15s21r919);
  --_9lz7urr: var(--_15s21r917);
  --_9lz7urs: var(--_15s21r91d);
  --_9lz7urt: var(--_15s21r91o);
  --_9lz7uru: var(--_15s21r91m);
  --_9lz7urv: var(--_15s21r915);
  --_9lz7urw: var(--_15s21r91b);
  --_9lz7urx: var(--_15s21r91k);
  --_9lz7ury: var(--_15s21r91q);
  --_9lz7urz: var(--_15s21r91f);
}
html.e8g0a610 ._9lz7ur13 {
  --_9lz7urq: var(--_15s21r91a);
  --_9lz7urr: var(--_15s21r918);
  --_9lz7urs: var(--_15s21r91e);
  --_9lz7urt: var(--_15s21r91p);
  --_9lz7uru: var(--_15s21r91n);
  --_9lz7urv: var(--_15s21r916);
  --_9lz7urw: var(--_15s21r91c);
  --_9lz7urx: var(--_15s21r91l);
  --_9lz7ury: var(--_15s21r91r);
  --_9lz7urz: var(--_15s21r91h);
}
html:not(.e8g0a610) ._9lz7ur14,
html:not(.e8g0a610) ._9lz7ur15,
html:not(.e8g0a610) ._9lz7ur16,
html:not(.e8g0a610) ._9lz7ur17 {
  --_9lz7urx: var(--_9lz7urq);
}
html:not(.e8g0a610) ._9lz7ur18,
html:not(.e8g0a610) ._9lz7ur19 {
  --_9lz7urx: var(--_9lz7urr);
}
html:not(.e8g0a610) ._9lz7ur1a {
  --_9lz7urx: var(--_9lz7uru);
}
html:not(.e8g0a610) ._9lz7ur1b {
  --_9lz7urx: var(--_9lz7urs);
}
html:not(.e8g0a610) ._9lz7ur1c {
  --_9lz7urx: var(--_9lz7urt);
}
html.e8g0a610 ._9lz7ur1d,
html.e8g0a610 ._9lz7ur1e,
html.e8g0a610 ._9lz7ur1f,
html.e8g0a610 ._9lz7ur1g {
  --_9lz7urx: var(--_9lz7urq);
}
html.e8g0a610 ._9lz7ur1h,
html.e8g0a610 ._9lz7ur1i {
  --_9lz7urx: var(--_9lz7urr);
}
html.e8g0a610 ._9lz7ur1j {
  --_9lz7urx: var(--_9lz7uru);
}
html.e8g0a610 ._9lz7ur1k {
  --_9lz7urx: var(--_9lz7urs);
}
html.e8g0a610 ._9lz7ur1l {
  --_9lz7urx: var(--_9lz7urt);
}
._9lz7ur1m {
  color: var(--_9lz7urq);
}
._9lz7ur1n {
  color: var(--_9lz7urr);
}
._9lz7ur1o {
  color: var(--_9lz7urs);
}
._9lz7ur1p {
  color: var(--_9lz7urt);
}
._9lz7ur1q {
  color: var(--_9lz7uru);
}
._9lz7ur1r {
  color: var(--_9lz7urv);
}
._9lz7ur1s {
  color: var(--_9lz7urw);
}
._9lz7ur1t {
  color: var(--_9lz7urx);
}
._9lz7ur1u {
  color: var(--_9lz7ury);
}
._9lz7ur1v {
  color: var(--_9lz7urz);
}
._9lz7ur1w {
  padding-bottom: calc((var(--_15s21r99) - var(--_15s21r932)) / 2);
  padding-top: calc((var(--_15s21r99) - var(--_15s21r932)) / 2);
}
._9lz7ur1x {
  padding-bottom: calc((var(--_15s21r99) - var(--_15s21r93c)) / 2);
  padding-top: calc((var(--_15s21r99) - var(--_15s21r93c)) / 2);
}
._9lz7ur1y {
  padding-bottom: calc((var(--_15s21r99) - var(--_15s21r93m)) / 2);
  padding-top: calc((var(--_15s21r99) - var(--_15s21r93m)) / 2);
}
._9lz7ur1z {
  padding-bottom: calc((var(--_15s21r99) - var(--_15s21r93w)) / 2);
  padding-top: calc((var(--_15s21r99) - var(--_15s21r93w)) / 2);
}
@media screen and (min-width: 740px) {
  ._9lz7ur4 {
    --_17i4nh30: var(--_15s21r936);
    --_17i4nh31: var(--_15s21r937);
    --_17i4nh32: var(--_15s21r939);
    --_17i4nh33: var(--_15s21r93a);
  }
  ._9lz7ur6 {
    --_17i4nh30: var(--_15s21r93g);
    --_17i4nh31: var(--_15s21r93h);
    --_17i4nh32: var(--_15s21r93j);
    --_17i4nh33: var(--_15s21r93k);
  }
  ._9lz7ur8 {
    --_17i4nh30: var(--_15s21r93q);
    --_17i4nh31: var(--_15s21r93r);
    --_17i4nh32: var(--_15s21r93t);
    --_17i4nh33: var(--_15s21r93u);
  }
  ._9lz7ura {
    --_17i4nh30: var(--_15s21r940);
    --_17i4nh31: var(--_15s21r941);
    --_17i4nh32: var(--_15s21r943);
    --_17i4nh33: var(--_15s21r944);
  }
  ._9lz7urc {
    font-size: var(--_15s21r936);
    line-height: var(--_15s21r937);
  }
  ._9lz7urd {
    font-size: var(--_15s21r93g);
    line-height: var(--_15s21r93h);
  }
  ._9lz7ure {
    font-size: var(--_15s21r93q);
    line-height: var(--_15s21r93r);
  }
  ._9lz7urf {
    font-size: var(--_15s21r940);
    line-height: var(--_15s21r941);
  }
  ._9lz7uri {
    --_17i4nh30: var(--_15s21r94d);
    --_17i4nh31: var(--_15s21r94e);
    --_17i4nh32: var(--_15s21r94g);
    --_17i4nh33: var(--_15s21r94h);
  }
  ._9lz7urk {
    --_17i4nh30: var(--_15s21r94n);
    --_17i4nh31: var(--_15s21r94o);
    --_17i4nh32: var(--_15s21r94q);
    --_17i4nh33: var(--_15s21r94r);
  }
  ._9lz7urm {
    --_17i4nh30: var(--_15s21r94x);
    --_17i4nh31: var(--_15s21r94y);
    --_17i4nh32: var(--_15s21r950);
    --_17i4nh33: var(--_15s21r951);
  }
  ._9lz7uro {
    --_17i4nh30: var(--_15s21r957);
    --_17i4nh31: var(--_15s21r958);
    --_17i4nh32: var(--_15s21r95a);
    --_17i4nh33: var(--_15s21r95b);
  }
  ._9lz7ur1w {
    padding-bottom: calc((var(--_15s21r99) - var(--_15s21r937)) / 2);
    padding-top: calc((var(--_15s21r99) - var(--_15s21r937)) / 2);
  }
  ._9lz7ur1x {
    padding-bottom: calc((var(--_15s21r99) - var(--_15s21r93h)) / 2);
    padding-top: calc((var(--_15s21r99) - var(--_15s21r93h)) / 2);
  }
  ._9lz7ur1y {
    padding-bottom: calc((var(--_15s21r99) - var(--_15s21r93r)) / 2);
    padding-top: calc((var(--_15s21r99) - var(--_15s21r93r)) / 2);
  }
  ._9lz7ur1z {
    padding-bottom: calc((var(--_15s21r99) - var(--_15s21r941)) / 2);
    padding-top: calc((var(--_15s21r99) - var(--_15s21r941)) / 2);
  }
}
._14qt5qq0 {
  margin-bottom: -0.1em;
}
._14qt5qq2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._14qt5qq0 ._14qt5qq2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._14qt5qq4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--_14qt5qq3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
._19dsuwt6 {
  background: var(--_19dsuwt0);
}
._19dsuwt7 {
  background: var(--_19dsuwt1);
}
._19dsuwt8 {
  background: var(--_19dsuwt2);
}
._19dsuwt9 {
  background: var(--_19dsuwt3);
}
._19dsuwta {
  background: var(--_19dsuwt4);
}
._19dsuwtb {
  background: var(--_19dsuwt5);
}
html:not(.e8g0a610) ._19dsuwtc {
  --_19dsuwt0: var(--_15s21r9w);
  --_19dsuwt1: var(--_15s21r9p);
  --_19dsuwt2: var(--_15s21r9u);
  --_19dsuwt3: var(--_15s21r9h);
  --_19dsuwt4: var(--_15s21r9j);
  --_19dsuwt5: var(--_15s21r9n);
}
html:not(.e8g0a610) ._19dsuwtd {
  --_19dsuwt0: var(--_15s21r9x);
  --_19dsuwt1: var(--_15s21r9q);
  --_19dsuwt2: var(--_15s21r9v);
  --_19dsuwt3: var(--_15s21r9i);
  --_19dsuwt4: var(--_15s21r9k);
  --_19dsuwt5: var(--_15s21r9o);
}
html.e8g0a610 ._19dsuwte {
  --_19dsuwt0: var(--_15s21r9w);
  --_19dsuwt1: var(--_15s21r9p);
  --_19dsuwt2: var(--_15s21r9u);
  --_19dsuwt3: var(--_15s21r9h);
  --_19dsuwt4: var(--_15s21r9j);
  --_19dsuwt5: var(--_15s21r9n);
}
html.e8g0a610 ._19dsuwtf {
  --_19dsuwt0: var(--_15s21r9x);
  --_19dsuwt1: var(--_15s21r9q);
  --_19dsuwt2: var(--_15s21r9v);
  --_19dsuwt3: var(--_15s21r9i);
  --_19dsuwt4: var(--_15s21r9k);
  --_19dsuwt5: var(--_15s21r9o);
}
._19dsuwtg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._19dsuwth {
  width: var(--_15s21r9e);
}
._19dsuwti {
  width: var(--_15s21r9a);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__e8g0a610,html.sprinkles_darkMode__e8g0a610 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__dlsh340 typography_lightModeTone_light__9lz7ur10 typography_darkModeTone_dark__9lz7ur13">
+        <div class="reset_base__1v8fg0v0 sprinkles_paddingBottom_gutter_mobile__e8g0a68p sprinkles_paddingTop_gutter_mobile__e8g0a67l sprinkles_paddingLeft_gutter_mobile__e8g0a6ax sprinkles_paddingRight_gutter_mobile__e8g0a69t sprinkles_position_relative_mobile__e8g0a65d sprinkles_borderRadius_large_mobile__e8g0a669 sprinkles_textAlign_left_mobile__e8g0a6i9 sprinkles_boxShadow_borderNeutralLight_lightMode__e8g0a64j sprinkles_boxShadow_borderNeutral_darkMode__e8g0a64c typography_lightModeTone_light__9lz7ur10 typography_darkModeTone_dark__9lz7ur13 sprinkles_background_surface_lightMode__e8g0a633 sprinkles_background_surfaceDark_darkMode__e8g0a636">
+          <span class="reset_base__1v8fg0v0 sprinkles_display_block_mobile__e8g0a64x typography_fontFamily__9lz7ur0 typography_fontWeight_regular__9lz7ur1 typography_tone_neutral__9lz7ur1t typography_textSize_large__9lz7ura capsize_capsizeStyle__17i4nh34">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
